' @compare_tag Process-ClassDiagram v0.1
@startuml
title GlobalPathStorage Process Class Diagram

namespace fast::rf {
   namespace DiagnosticDefinition {
    enum DiagnosticType
  }
  namespace messages {
    namespace InfrastructureMsgs {
      class DiagnosticMsg <<(M,#FFFF00)>>
    }
  }
  namespace core::Infrastructure {
    class DiagnosticManager
  }
  namespace NavigationSystem {
    namespace GlobalPlannerSubsystem {
      package GlobalPathStorage #LightYellow;line:blue {
        interface IGlobalPathStorageProcess  {
          +{abstract} bool init()
          +{abstract} DiagnosticMsg[] getDiagnostics()
          +{abstract} bool update(double current_time_sec)
        }
        abstract BaseGlobalPathStorageProcess {
          +DiagnosticMsg[] getDiagnostics()
          +bool base_update(double current_time_sec)
          #DiagnosticManager diagnosticManager

        }
        BaseGlobalPathStorageProcess .up.|> IGlobalPathStorageProcess
        BaseGlobalPathStorageProcess --> DiagnosticManager: <<use>>
        class BasicGlobalPathStorageProcess {
          +bool init()
          +bool update(double current_time_sec)
        }
        BasicGlobalPathStorageProcess -up-|> BaseGlobalPathStorageProcess
        class DummyGlobalPathStorageProcess {
          +bool update(double current_time_sec)
        }
        DummyGlobalPathStorageProcess -up-|> BaseGlobalPathStorageProcess
      }
    }
  }
}
@enduml